--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,23 @@
 {
-  "manifest_version": 3,
-  "name": "Meeiro Staking Tracker",
-  "version": "1.0",
-  "description": "Отслеживание баланса стейкинга MEE Coin на Aptos.",
-  
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+    "manifest_version": 3,
+    "name": "MEE Aptos Staking Monitor",
+    "version": "1.0.1",
+    "description": "Монитор стейкинга $MEE на Aptos. Отображает баланс и награду в реальном времени.",
+    "permissions": ["storage"],
+    
+    "action": {
+        "default_popup": "popup.html",
+        "default_title": "MEE Aptos Staking Monitor",
+        "default_icon": {
+            "16": "icons/icon16.png",
+            "48": "icons/icon48.png",
+            "128": "icons/icon128.png"
+        }
+    },
+    
+    "icons": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
     }
-  },
-  
-  "permissions": [
-    "storage", 
-    "unlimitedStorage", 
-    "clipboardWrite" 
-  ],
-  
-  "host_permissions": [
-    "https://fullnode.mainnet.aptoslabs.com/*", 
-    "https://explorer.aptoslabs.com/*" 
-  ],
-  
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  }
 }
